package(features=['-hidden_visibility_feature'])
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

proto_library(
    name = "chassis_control_interface_type_proto",
    visibility = ["//visibility:public"],
    srcs = ["chassis_control_interface_type.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "chassis_control_interface_type_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":chassis_control_interface_type_proto",
    ],
)

python_proto_library(
    name = "chassis_control_interface_type_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":chassis_control_interface_type_proto",
    ],
)

proto_library(
    name = "mar_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["mar_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "mar_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":mar_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "mar_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":mar_chassis_detail_proto",
    ],
)

proto_library(
    name = "m7_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["m7_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "m7_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":m7_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "m7_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":m7_chassis_detail_proto",
    ],
)

proto_library(
    name = "m5_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["m5_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "m5_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":m5_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "m5_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":m5_chassis_detail_proto",
    ],
)

proto_library(
    name = "byd_tang_adas_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["byd_tang_adas_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "byd_tang_adas_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":byd_tang_adas_detail_proto",
    ],
)

python_proto_library(
    name = "byd_tang_adas_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":byd_tang_adas_detail_proto",
    ],
)

proto_library(
    name = "canbus_blc_state_proto",
    visibility = ["//visibility:public"],
    srcs = ["canbus_blc_state.proto"],
    deps = [
        "//proto/common/configs:vehicle_config_proto",
        "//proto/canbus:chassis_proto",
        "//proto/common:vehicle_signal_proto",
        "//proto/canbus:chassis_control_interface_type_proto",
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "canbus_blc_state_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":canbus_blc_state_proto",
    ],
)

python_proto_library(
    name = "canbus_blc_state_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":canbus_blc_state_proto",
    ],
)

proto_library(
    name = "canraw_proto",
    visibility = ["//visibility:public"],
    srcs = ["canraw.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "canraw_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":canraw_proto",
    ],
)

python_proto_library(
    name = "canraw_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":canraw_proto",
    ],
)

proto_library(
    name = "gwm_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["gwm_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "gwm_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":gwm_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "gwm_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":gwm_chassis_detail_proto",
    ],
)

proto_library(
    name = "gwm_tank_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["gwm_tank_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "gwm_tank_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":gwm_tank_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "gwm_tank_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":gwm_tank_chassis_detail_proto",
    ],
)

proto_library(
    name = "gwm_all_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["gwm_all_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "gwm_all_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":gwm_all_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "gwm_all_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":gwm_all_chassis_detail_proto",
    ],
)

proto_library(
    name = "gwm_de09_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["gwm_de09_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "gwm_de09_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":gwm_de09_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "gwm_de09_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":gwm_de09_chassis_detail_proto",
    ],
)

proto_library(
    name = "gl_p177_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["gl_p177_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "gl_p177_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":gl_p177_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "gl_p177_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":gl_p177_chassis_detail_proto",
    ],
)

proto_library(
    name = "byd_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["byd_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "byd_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":byd_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "byd_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":byd_chassis_detail_proto",
    ],
)

proto_library(
    name = "model_config_proto",
    visibility = ["//visibility:public"],
    srcs = ["model_config.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "model_config_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":model_config_proto",
    ],
)

python_proto_library(
    name = "model_config_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":model_config_proto",
    ],
)

proto_library(
    name = "vehicle_custom_config_proto",
    visibility = ["//visibility:public"],
    srcs = ["vehicle_custom_config.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "vehicle_custom_config_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":vehicle_custom_config_proto",
    ],
)

python_proto_library(
    name = "vehicle_custom_config_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":vehicle_custom_config_proto",
    ],
)


expand_template(
    name = "dtu_hmi_canbus_interface",
    out = "dtu_hmi_canbus_interface.proto",
    template = "dtu_hmi_canbus_interface.proto.in",
    substitutions = selects.with_or({
        ("@deeproute_build_tools//:TANK-ALL_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_tank_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        GwmTankHmi gwm_tank = 9;
""",
        "@_CHASSIS_HMI_TYPE_@": """
message GwmTankHmi {
  optional deeproute.canbus.gwm.tank.HAP_FD1_15B hap_fd1_15b = 1;
  optional deeproute.canbus.gwm.tank.HAP_FD2_274 hap_fd2_274 = 2;
  optional deeproute.canbus.gwm.tank.HAP_FD3_298 hap_fd3_298 = 3;
  optional deeproute.canbus.gwm.tank.HAP_FD6_289 hap_fd6_289 = 4;
  optional deeproute.canbus.gwm.tank.HAP_FD7_29B hap_fd7_29b = 5;

  optional deeproute.canbus.gwm.tank.ACC_FD1_143 acc_fd1_143 = 6;
  optional deeproute.canbus.gwm.tank.ACC_FD2_2AB acc_fd2_2ab = 7;
  optional deeproute.canbus.gwm.tank.ACC_FD3_2B4 acc_fd3_2b4 = 8;
  optional deeproute.canbus.gwm.tank.ACC_FD4_2B8 acc_fd4_2b8 = 9;

  optional deeproute.canbus.gwm.tank.IFC_FD1_12B ifc_fd1_12b = 10;
  optional deeproute.canbus.gwm.tank.IFC_FD2_23D ifc_fd2_23d = 11;
  optional deeproute.canbus.gwm.tank.IFC_FD3_2CF ifc_fd3_2cf = 12;
  optional deeproute.canbus.gwm.tank.IFC_FD4_240 ifc_fd4_240 = 13;
  optional deeproute.canbus.gwm.tank.IFC_FD5_19F ifc_fd5_19f = 14;
  optional deeproute.canbus.gwm.tank.IFC_FD6_222 ifc_fd6_222 = 15;
  optional deeproute.canbus.gwm.tank.IFC_FD7_2A2 ifc_fd7_2a2 = 16;
  optional deeproute.canbus.gwm.tank.IFC_FD10_266 ifc_fd10_266 = 17;

  optional deeproute.canbus.gwm.tank.AEB_FD1_18B aeb_fd1_18b = 18;
  optional deeproute.canbus.gwm.tank.AEB_FD2_227 aeb_fd2_227 = 19;

  optional deeproute.canbus.gwm.tank.MDC_FD1_312 mdc_fd1_312 = 20;
  optional deeproute.canbus.gwm.tank.CR_FD1_15E cr_fd1_15e = 21;
  optional deeproute.canbus.gwm.tank.RSDS_FD1_16F rsds_fd1_16f = 22;
  optional deeproute.canbus.gwm.tank.RSDS_FD2_30A rsds_fd2_30a = 23;
}
"""
        },
        ("@deeproute_build_tools//:GWM-ORINY-SHARE_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_all_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        GwmAllHmi gwm_all = 13;
""",
        "@_CHASSIS_HMI_TYPE_@": """
message GwmAllHmi {
  optional deeproute.canbus.gwm.all.HAP_FD1_15B hap_fd1_15b = 1;
  optional deeproute.canbus.gwm.all.HAP_FD2_274 hap_fd2_274 = 2;
  optional deeproute.canbus.gwm.all.HAP_FD6_289 hap_fd6_289 = 3;
  optional deeproute.canbus.gwm.all.HAP_FD3_298 hap_fd3_298 = 4;
  optional deeproute.canbus.gwm.all.HAP_FD7_29B hap_fd7_29b = 5;

  optional deeproute.canbus.gwm.all.ACC_FD1_143 acc_fd1_143 = 6;
  optional deeproute.canbus.gwm.all.ACC_FD2_2AB acc_fd2_2ab = 7;
  optional deeproute.canbus.gwm.all.ACC_FD3_2B4 acc_fd3_2b4 = 8;
  optional deeproute.canbus.gwm.all.ACC_FD4_2B8 acc_fd4_2b8 = 9;

  optional deeproute.canbus.gwm.all.IFC_FD1_12B ifc_fd1_12b = 10;
  optional deeproute.canbus.gwm.all.IFC_FD5_19F ifc_fd5_19f = 11;
  optional deeproute.canbus.gwm.all.IFC_FD6_222 ifc_fd6_222 = 12;
  optional deeproute.canbus.gwm.all.IFC_FD2_23D ifc_fd2_23d = 13;
  optional deeproute.canbus.gwm.all.IFC_FD4_240 ifc_fd4_240 = 14;
  optional deeproute.canbus.gwm.all.IFC_FD7_2A2 ifc_fd7_2a2 = 15;
  optional deeproute.canbus.gwm.all.IFC_FD3_2CF ifc_fd3_2cf = 16;
  optional deeproute.canbus.gwm.all.IFC_FD10_266 ifc_fd10_266 = 17;
  
  optional deeproute.canbus.gwm.all.AEB_FD1_18B aeb_fd1_18b = 18;
  optional deeproute.canbus.gwm.all.AEB_FD2_227 aeb_fd2_227 = 19;

  optional deeproute.canbus.gwm.all.MDC_FD1_312 mdc_fd1_312 = 20;
  optional deeproute.canbus.gwm.all.CR_FD1_15E cr_fd1_15e = 21;
  optional deeproute.canbus.gwm.all.ADAS_AD1_470 adas_ad1_470 = 22;
  optional deeproute.canbus.gwm.all.RSDS_FD1_16F rsds_fd1_16f = 23;
  optional deeproute.canbus.gwm.all.RSDS_FD2_30A rsds_fd2_30a = 24;
}
"""
        },
        ("@deeproute_build_tools//:GWM-THORU-SHARE_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_all_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        GwmAllHmi gwm_all = 13;
""",
        "@_CHASSIS_HMI_TYPE_@": """
message GwmAllHmi {
  optional deeproute.canbus.gwm.all.HAP_FD1_15B hap_fd1_15b = 1;
  optional deeproute.canbus.gwm.all.HAP_FD2_274 hap_fd2_274 = 2;
  optional deeproute.canbus.gwm.all.HAP_FD6_289 hap_fd6_289 = 3;
  optional deeproute.canbus.gwm.all.HAP_FD3_298 hap_fd3_298 = 4;
  optional deeproute.canbus.gwm.all.HAP_FD7_29B hap_fd7_29b = 5;

  optional deeproute.canbus.gwm.all.ACC_FD1_143 acc_fd1_143 = 6;
  optional deeproute.canbus.gwm.all.ACC_FD2_2AB acc_fd2_2ab = 7;
  optional deeproute.canbus.gwm.all.ACC_FD3_2B4 acc_fd3_2b4 = 8;
  optional deeproute.canbus.gwm.all.ACC_FD4_2B8 acc_fd4_2b8 = 9;

  optional deeproute.canbus.gwm.all.IFC_FD1_12B ifc_fd1_12b = 10;
  optional deeproute.canbus.gwm.all.IFC_FD5_19F ifc_fd5_19f = 11;
  optional deeproute.canbus.gwm.all.IFC_FD6_222 ifc_fd6_222 = 12;
  optional deeproute.canbus.gwm.all.IFC_FD2_23D ifc_fd2_23d = 13;
  optional deeproute.canbus.gwm.all.IFC_FD4_240 ifc_fd4_240 = 14;
  optional deeproute.canbus.gwm.all.IFC_FD7_2A2 ifc_fd7_2a2 = 15;
  optional deeproute.canbus.gwm.all.IFC_FD3_2CF ifc_fd3_2cf = 16;
  optional deeproute.canbus.gwm.all.IFC_FD10_266 ifc_fd10_266 = 17;
  
  optional deeproute.canbus.gwm.all.AEB_FD1_18B aeb_fd1_18b = 18;
  optional deeproute.canbus.gwm.all.AEB_FD2_227 aeb_fd2_227 = 19;

  optional deeproute.canbus.gwm.all.MDC_FD1_312 mdc_fd1_312 = 20;
  optional deeproute.canbus.gwm.all.CR_FD1_15E cr_fd1_15e = 21;
  optional deeproute.canbus.gwm.all.ADAS_AD1_470 adas_ad1_470 = 22;
  optional deeproute.canbus.gwm.all.RSDS_FD1_16F rsds_fd1_16f = 23;
  optional deeproute.canbus.gwm.all.RSDS_FD2_30A rsds_fd2_30a = 24;
}
"""
        },

("@deeproute_build_tools//:YINHE-ALL_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gl_p177_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        GLP177Hmi gl_p177 = 10;
""",

            "@_CHASSIS_HMI_TYPE_@": """
message GLP177Hmi {
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR09_101 adpu_ad_redundancy_can_fr09_101 = 1; // control message
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR08_102 adpu_ad_redundancy_can_fr08_102 = 2; // control message
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR07_103 adpu_ad_redundancy_can_fr07_103 = 3; // control message
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR06_105 adpu_ad_redundancy_can_fr06_105 = 4; // control message
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR03_108 adpu_ad_redundancy_can_fr03_108 = 5; // control message
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR02_109 adpu_ad_redundancy_can_fr02_109 = 6; // control message
  optional deeproute.canbus.gl.p177.ADPU_AD_REDUNDANCY_CAN_FR01_110 adpu_ad_redundancy_can_fr01_110 = 7; // control message
  optional deeproute.canbus.gl.p177.ADSC_AD_REDUNDANCY_FR05_115 adsc_ad_redundancy_fr05_115 = 8; // control message
  optional deeproute.canbus.gl.p177.ADSC_AD_REDUNDANCY_FR04_126 adsc_ad_redundancy_fr04_126 = 9; // control message
  optional deeproute.canbus.gl.p177.RBCM_AD_REDUNDANCY_FR09_158 rbcm_ad_redundancy_fr09_158 = 10; // control message
  optional deeproute.canbus.gl.p177.ADCU_AD_REDUNDANCY_FR02_160 adcu_ad_redundancy_fr02_160 = 11; // control message
  optional deeproute.canbus.gl.p177.ADSC_AD_REDUNDANCY_FR01_177 adsc_ad_redundancy_fr01_177 = 12; // control message
  optional deeproute.canbus.gl.p177.ADSC_AD_REDUNDANCY_FR02_178 adsc_ad_redundancy_fr02_178 = 13; // control message
  optional deeproute.canbus.gl.p177.ADSC_AD_REDUNDANCY_FR03_179 adsc_ad_redundancy_fr03_179 = 14; // control message
  optional deeproute.canbus.gl.p177.RBCM_AD_REDUNDANCY_FR10_219 rbcm_ad_redundancy_fr10_219 = 15; // control message
  optional deeproute.canbus.gl.p177.RBCM_AD_REDUNDANCY_FR11_220 rbcm_ad_redundancy_fr11_220 = 16; // control message
  optional deeproute.canbus.gl.p177.RBCM_AD_REDUNDANCY_FR07_23A rbcm_ad_redundancy_fr07_23a = 17; // control message
  optional deeproute.canbus.gl.p177.ADCU_AD_REDUNDANCY_FR03_23B adcu_ad_redundancy_fr03_23b = 18; // control message
  optional deeproute.canbus.gl.p177.RBCM_AD_REDUNDANCY_FR06_241 rbcm_ad_redundancy_fr06_241 = 19; // control message
  optional deeproute.canbus.gl.p177.ADCU_AD_REDUNDANCY_CAN_NM_FR01_506 adcu_ad_redundancy_can_nm_fr01_506 = 20; // control message
  optional deeproute.canbus.gl.p177.ADCU_AD_REDUNDANCY_CANVFC_VECT_FR_546 adcu_ad_redundancy_canvfc_vect_fr_546 = 21; // control message
  optional deeproute.canbus.gl.p177.ADCU_AD_REDUNDANCY_FR01_80 adcu_ad_redundancy_fr01_80 = 22; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR07_117 asdm_chas1_fr07_117 = 23; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR06_131 asdm_chas1_fr06_131 = 24; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR05_165 asdm_chas1_fr05_165 = 25; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR11_176 asdm_chas1_fr11_176 = 26; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR08_199 asdm_chas1_fr08_199 = 27; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR03_33 asdm_chas1_fr03_33 = 28; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR09_379 asdm_chas1_fr09_379 = 29; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_NM_FR_529 asdm_chas1_nm_fr_529 = 30; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR10_54 asdm_chas1_fr10_54 = 31; // control message
  optional deeproute.canbus.gl.p177.ADCU_CHAS1_VFC_VECTOR_FR_569 adcu_chas1_vfc_vector_fr_569 = 32; // control message
  optional deeproute.canbus.gl.p177.ASDM_CHAS1_FR01_93 asdm_chas1_fr01_93 = 33; // control message
  optional deeproute.canbus.gl.p177.PAS_CHAS1_FR04_95 pas_chas1_fr04_95 = 34; // control message
  optional deeproute.canbus.gl.p177.PAS_CHAS1_FR02_EB pas_chas1_fr02_eb = 35; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR33_100 adcu_zcucanfd1_fr33_100 = 36; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR20_112 paszcucanfd1_fr20_112 = 37; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR23_116 adcu_zcucanfd1_fr23_116 = 38; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR08_120 adcu_zcucanfd1_fr08_120 = 39; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_RESD_FR01_131 adcu_zcucanfd1_resd_fr01_131 = 40; // control message
  optional deeproute.canbus.gl.p177.ADCU_TO_DHU_SEC_OC_FR01_132 adcu_to_dhu_sec_oc_fr01_132 = 41; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUDCANFD1_SYCN_REQ_FR_155 adcu_zcudcanfd1_sycn_req_fr_155 = 42; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR13_190 adcu_zcucanfd1_fr13_190 = 43; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR04_1A0 adcu_zcucanfd1_fr04_1a0 = 44; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR10_1B5 adcu_zcucanfd1_fr10_1b5 = 45; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR01_1C0 adcu_zcucanfd1_fr01_1c0 = 46; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR21_1C6 adcu_zcucanfd1_fr21_1c6 = 47; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR22_1CA adcu_zcucanfd1_fr22_1ca = 48; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR11_1E0 adcu_zcucanfd1_fr11_1e0 = 49; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR02_1F0 adcu_zcucanfd1_fr02_1f0 = 50; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR06_1FF adcu_zcucanfd1_fr06_1ff = 51; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR06_210 paszcucanfd1_fr06_210 = 52; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR04_211 paszcucanfd1_fr04_211 = 53; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR14_220 adcu_zcucanfd1_fr14_220 = 54; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR19_226 adcu_zcucanfd1_fr19_226 = 55; // control message
  optional deeproute.canbus.gl.p177.BCM_ZCUCANFD1_FR11_240 bcm_zcucanfd1_fr11_240 = 56; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR15_24B paszcucanfd1_fr15_24b = 57; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR07_280 adcu_zcucanfd1_fr07_280 = 58; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR03_2F0 adcu_zcucanfd1_fr03_2f0 = 59; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR24_300 adcu_zcucanfd1_fr24_300 = 60; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR25_301 adcu_zcucanfd1_fr25_301 = 61; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR26_302 adcu_zcucanfd1_fr26_302 = 62; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR27_303 adcu_zcucanfd1_fr27_303 = 63; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR28_304 adcu_zcucanfd1_fr28_304 = 64; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR29_305 adcu_zcucanfd1_fr29_305 = 65; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR30_306 adcu_zcucanfd1_fr30_306 = 66; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR20_30A adcu_zcucanfd1_fr20_30a = 67; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR18_310 paszcucanfd1_fr18_310 = 68; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR02_311 paszcucanfd1_fr02_311 = 69; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR05_335 paszcucanfd1_fr05_335 = 70; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR09_360 adcu_zcucanfd1_fr09_360 = 71; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR12_370 adcu_zcucanfd1_fr12_370 = 72; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR31_371 adcu_zcucanfd1_fr31_371 = 73; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR32_372 adcu_zcucanfd1_fr32_372 = 74; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR19_451 paszcucanfd1_fr19_451 = 75; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR15_469 adcu_zcucanfd1_fr15_469 = 76; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_FR05_480 adcu_zcucanfd1_fr05_480 = 77; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUDCANFD1_NM_FR_501 adcu_zcudcanfd1_nm_fr_501 = 78; // control message
  optional deeproute.canbus.gl.p177.ADCU_ZCUCANFD1_VFC_VECT_FR_541 adcu_zcucanfd1_vfc_vect_fr_541 = 79; // control message
  optional deeproute.canbus.gl.p177.PASZCUCANFD1_FR07_60 paszcucanfd1_fr07_60 = 80; // control message
}

""",
        },
        ("//conditions:default") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
""",
            "@_CHASSIS_HMI_TYPE_@": """
""",
        },
        
    }),
)
expand_template(
    name = "car_info",
    out = "car_info.proto",
    template = "car_info.proto.in",
    substitutions = selects.with_or({
        ("@deeproute_build_tools//:AT7-ET_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/m7_chassis_detail.proto";  // keep
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
    M7ChassisDetail m7 = 4;  // keep
""",
        },
        ("@deeproute_build_tools//:C01-PT_setting", "@deeproute_build_tools//:M8-ALL_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_chassis_detail.proto";  // keep
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
    GwmChassisDetail gwm = 6;  // keep
""",
        },
        ("@deeproute_build_tools//:TANK-ALL_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_tank_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        deeproute.canbus.gwm.tank.GwmTankChassisDetail gwm_tank = 9;
""",
        },
        ("@deeproute_build_tools//:GWM-ORINY-SHARE_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_all_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        deeproute.canbus.gwm.all.GwmAllChassisDetail gwm_all = 13;
""",
        },
        ("@deeproute_build_tools//:GWM-THORU-SHARE_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gwm_all_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        deeproute.canbus.gwm.all.GwmAllChassisDetail gwm_all = 13;
""",
        },
        ("@deeproute_build_tools//:YINHE-ALL_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/gl_p177_chassis_detail.proto";
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        deeproute.canbus.gl.p177.GlP177ChassisDetail gl_p177 = 11;
""",
        },
        ("@deeproute_build_tools//:HY11-ET_setting", "@deeproute_build_tools//:HY11P-ET_setting") : {
            "@_IMPORT_CHASSIS_DETAIL_PROTO_@" : """
import "canbus/hy11_chassis_detail.proto";  // keep
""",
            "@_CHASSIS_DETAIL_MESSAGE_TYPE_@" : """
        SmartHy11ChassisDetail smart_hy11 = 7;  // keep
""",
        },
    })
)

proto_library(
    name = "car_info_proto",
    visibility = ["//visibility:public"],
    srcs = [":car_info.proto"],
    deps = [
        "//proto/canbus:chassis_proto",
        "//proto/common/configs:vehicle_config_proto",
        "//proto/common:vehicle_signal_proto",
    ] + selects.with_or({
        ("@deeproute_build_tools//:AT7-ET_setting") : [
            "//proto/canbus:m7_chassis_detail_proto", # keep
        ],
        ("@deeproute_build_tools//:C01-PT_setting", "@deeproute_build_tools//:M8-ALL_setting") : [
            "//proto/canbus:gwm_chassis_detail_proto", # keep
        ],
        ("@deeproute_build_tools//:TANK-ALL_setting") : [
            "//proto/canbus:gwm_tank_chassis_detail_proto",
        ],
        ("@deeproute_build_tools//:GWM-ORINY-SHARE_setting") : [
            "//proto/canbus:gwm_all_chassis_detail_proto",
        ],
        ("@deeproute_build_tools//:GWM-THORU-SHARE_setting") : [
            "//proto/canbus:gwm_all_chassis_detail_proto",
        ],
        ("@deeproute_build_tools//:YINHE-ALL_setting") : [
            "//proto/canbus:gl_p177_chassis_detail_proto",
        ],
        ("@deeproute_build_tools//:HY11-ET_setting", "@deeproute_build_tools//:HY11P-ET_setting") : [
            "//proto/canbus:hy11_chassis_detail_proto", # keep
        ],
    }),
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "car_info_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":car_info_proto",
    ],
)

python_proto_library(
    name = "car_info_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":car_info_proto",
    ],
)

proto_library(
    name = "dtu_hmi_canbus_interface_proto",
    visibility = ["//visibility:public"],
    srcs = [":dtu_hmi_canbus_interface"],
    deps = [
        "//proto/common/configs:vehicle_config_proto",
        "//proto/canbus:byd_chassis_detail_proto",
        "//proto/canbus:gwm_chassis_detail_proto",
        "//proto/canbus:gwm_tank_chassis_detail_proto",
        "//proto/canbus:gwm_de09_chassis_detail_proto",
        "//proto/canbus:gwm_all_chassis_detail_proto",
        "//proto/canbus:gl_p177_chassis_detail_proto",
        "//proto/canbus:hy11_chassis_detail_proto",
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "dtu_hmi_canbus_interface_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":dtu_hmi_canbus_interface_proto",
    ],
)

python_proto_library(
    name = "dtu_hmi_canbus_interface_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":dtu_hmi_canbus_interface_proto",
    ],
)

proto_library(
    name = "canbus_state_report_proto",
    visibility = ["//visibility:public"],
    srcs = ["canbus_state_report.proto"],
    deps = [
        "//proto/common:header_proto",
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "canbus_state_report_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":canbus_state_report_proto",
    ],
)

python_proto_library(
    name = "canbus_state_report_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":canbus_state_report_proto",
    ],
)

proto_library(
    name = "can_card_parameter_proto",
    visibility = ["//visibility:public"],
    srcs = ["can_card_parameter.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "can_card_parameter_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":can_card_parameter_proto",
    ],
)

python_proto_library(
    name = "can_card_parameter_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":can_card_parameter_proto",
    ],
)

proto_library(
    name = "hy11_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["hy11_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "hy11_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":hy11_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "hy11_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":hy11_chassis_detail_proto",
    ],
)

proto_library(
    name = "dtu_canbus_interface_proto",
    visibility = ["//visibility:public"],
    srcs = ["dtu_canbus_interface.proto"],
    deps = [
        "//proto/common:vehicle_signal_proto",
        "//proto/common/configs:vehicle_config_proto",
        "//proto/canbus:byd_chassis_detail_proto",
        "//proto/canbus:chassis_control_interface_type_proto",
        "//proto/canbus:gwm_chassis_detail_proto",
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "dtu_canbus_interface_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":dtu_canbus_interface_proto",
    ],
)

python_proto_library(
    name = "dtu_canbus_interface_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":dtu_canbus_interface_proto",
    ],
)

proto_library(
    name = "byd_tang_chassis_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["byd_tang_chassis_detail.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "byd_tang_chassis_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":byd_tang_chassis_detail_proto",
    ],
)

python_proto_library(
    name = "byd_tang_chassis_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":byd_tang_chassis_detail_proto",
    ],
)

proto_library(
    name = "torque_speed_table_proto",
    visibility = ["//visibility:public"],
    srcs = ["torque_speed_table.proto"],
    deps = [
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "torque_speed_table_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":torque_speed_table_proto",
    ],
)

python_proto_library(
    name = "torque_speed_table_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":torque_speed_table_proto",
    ],
)

proto_library(
    name = "byd_tang_detail_proto",
    visibility = ["//visibility:public"],
    srcs = ["byd_tang_detail.proto"],
    deps = [
        "//proto/canbus:byd_tang_adas_detail_proto",
        "//proto/canbus:byd_tang_chassis_detail_proto",
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "byd_tang_detail_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":byd_tang_detail_proto",
    ],
)

python_proto_library(
    name = "byd_tang_detail_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":byd_tang_detail_proto",
    ],
)

proto_library(
    name = "chassis_proto",
    visibility = ["//visibility:public"],
    srcs = ["chassis.proto"],
    deps = [
        "//proto/common:header_proto",
        "//proto/common:vehicle_signal_proto",
        "//proto/common:drive_state_proto",
        "//proto/common:geometry_proto",
        "//proto/common/configs:vehicle_config_proto",
    ],
    strip_import_prefix = "/proto/",
)

cc_proto_library(
    name = "chassis_proto_cc",
    visibility = ["//visibility:public"],
    deps = [
        ":chassis_proto",
    ],
)

python_proto_library(
    name = "chassis_proto_py",
    visibility = ["//visibility:public"],
    protos = [
        ":chassis_proto",
    ],
)

